--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A language interpretation and recognition interface.",
   "main": "liri.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepush": "npm version patch"
   },
   "repository": {
     "type": "git",
@@ -21,10 +22,14 @@
   "bugs": {
     "url": "https://github.com/amcnulty/liri-node-app/issues"
   },
+  "bin": {
+    "liri": "liri.js"
+  },
   "homepage": "https://github.com/amcnulty/liri-node-app#readme",
   "dependencies": {
     "chalk": "^2.3.0",
     "dotenv": "^4.0.0",
+    "husky": "^0.14.3",
     "node-spotify-api": "^1.0.7",
     "request": "^2.83.0",
     "twitter": "^1.7.1"
